--- a/src/Sandbox/client/src/components/directives/fm-newsfeed-directive/fm-newsfeed-view.html
+++ b/src/Sandbox/client/src/components/directives/fm-newsfeed-directive/fm-newsfeed-view.html
@@ -19,5 +19,5 @@
 </article>
 
 <div>
-  <a href="" ui-sref="Nyheter" class="fm-button fm-news-button">Visa alla</a>
+  <a href="" ui-sref="news" class="fm-button fm-news-button">Visa alla</a>
 </div>
