Added fm-disclaimer directive

--- a/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-view.html
@@ -1,7 +1,5 @@
 ﻿
-<section class="background-light section-padding" style="padding-top: 2.5rem;">
-  <!-- Fix later -->
-
+<section class="background-light section-padding" style="padding-top: 2.5rem;"><!-- Fix later -->
   <div class="container">
 
     <!-- Step indicator -->
@@ -18,13 +16,12 @@
       </div>
     </div><!-- Form:end -->
 
-    <!--<div class="row">
+    <!-- Disclaimer -->
+    <div class="row">
       <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-        <a href="" ui-sref=".userdetails" class="fm-button button-accent">state1</a>
-        <a href="" ui-sref=".configure" class="fm-button button-accent">state3</a>
-        <a href="" ui-sref=".confirm" class="fm-button button-accent">state4</a>
+        <fm-disclaimer disclaimer="fmPortfolio.disclaimer"></fm-disclaimer>
       </div>
-    </div>-->
+    </div><!-- Disclaimer:end -->
 
   </div>
 </section>
