--- a/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/subviews/userdetails/fm-portfolio-generator-userdetails-style.scss
+++ b/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/subviews/userdetails/fm-portfolio-generator-userdetails-style.scss
@@ -11,7 +11,7 @@ $errorMessageLength: 21rem;
   .user-input {
     display: inline-block;
     position: relative;
-    // white-space: nowrap;
+    white-space: nowrap;
 
     .input-error-message {
       position: absolute;
