--- a/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-style.scss
+++ b/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-style.scss
@@ -1,8 +1,16 @@
 ﻿.fm-button-bar {
   display: flex;
-  justify-content:space-between;
+  justify-content:space-around;
+  max-width: 100%;
+  margin: 0 auto $layout-modifier-sm auto;
+
+   @media(min-width: $screen-sm) {
+     max-width: 40rem;
+   }
 
   .fm-button {
     display: block;
+    //width: 45%;
+    margin: 0 auto;
   }
 }
