Quickfix for highchart issue

--- a/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/subviews/fundpackage/fm-portfolio-generator-fundpackage-style.scss
+++ b/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/subviews/fundpackage/fm-portfolio-generator-fundpackage-style.scss
@@ -92,9 +92,12 @@
 
   .fund-package-content {
     padding: $layout-modifier-sm;
+    min-height: 40rem;
 
     .pie-chart {
-      
+      height: auto; 
+      width: 100%; 
+      margin: 0 auto;
     }
   }
 }
