--- a/src/Sandbox/wwwroot/views/fm-portfolio-generator-userdetails-view.html
+++ b/src/Sandbox/wwwroot/views/fm-portfolio-generator-userdetails-view.html
@@ -3,11 +3,11 @@
 
     <div class="fund-generator-user-data section-padding">
       <span class="user-input">Jag är <input type="text" ng-keydown="fmPortfolio.preventNonNumbers($event)" ng-model="fmPortfolio.userData.age.value" ng-blur="fmPortfolio.validateAge()" ng-class="{ 'input-error' : fmPortfolio.userData.age.errorMessage }" class="input-short" placeholder="" maxlength="2" name="age"> år gammal.
-        <span class="input-error-message" ng-class="{ 'animated fadeInUp' : fmPortfolio.userData.age.errorMessage}">{{fmPortfolio.userData.age.errorMessage}}</span>
+        <span class="input-error-message hidden-xs hidden-sm" ng-class="{ 'animated fadeInUp' : fmPortfolio.userData.age.errorMessage}">{{fmPortfolio.userData.age.errorMessage}}</span>
       </span>
 
-      <span class="user-input">Min årliga inkomst uppgår till <input type="text" ng-keydown="fmPortfolio.preventNonNumbers($event)" ng-model="fmPortfolio.userData.income.value" ng-blur="fmPortfolio.validateIncome()" ng-class="{ 'input-error' : fmPortfolio.userData.income.errorMessage }" placeholder="" maxlength="9" name="income"> :-
-        <span class="input-error-message right" ng-class="{ 'animated fadeInUp' : fmPortfolio.userData.income.errorMessage, 'animated fadeInDown' : !fmPortfolio.userData.income.errorMessage}">{{fmPortfolio.userData.income.errorMessage}}</span>
+      <span class="user-input">Min årliga inkomst uppgår till <input type="text" ng-keydown="fmPortfolio.preventNonNumbers($event)" ng-model="fmPortfolio.userData.income.value" ng-blur="fmPortfolio.validateIncome()" ng-class="{ 'input-error' : fmPortfolio.userData.income.errorMessage }" placeholder="" maxlength="8" name="income"> :-
+        <span class="input-error-message right hidden-xs hidden-sm" ng-class="{ 'animated fadeInUp' : fmPortfolio.userData.income.errorMessage, 'animated fadeInDown' : !fmPortfolio.userData.income.errorMessage}">{{fmPortfolio.userData.income.errorMessage}}</span>
       </span>
     </div>
 
