--- a/src/Sandbox/wwwroot/views/fm-step-progressbar-view.html
+++ b/src/Sandbox/wwwroot/views/fm-step-progressbar-view.html
@@ -4,6 +4,9 @@
       {{step.stepTitle}}
     </li>
   </ul>
-</div>
 
+  <div class="small-progressbar">
+    <span class="meter" style="width:{{(100 / steps.totalSteps.length) * steps.currentStep}}%;"></span>
+  </div>
+</div>
 
