--- a/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/subviews/fundpackage/fm-portfolio-generator-fundpackage-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/subviews/fundpackage/fm-portfolio-generator-fundpackage-view.html
@@ -115,3 +115,7 @@
     </div>
   </footer>
 </div>
+
+<div class="fm-button-bar">
+  <button ng-click="fmPortfolio.states.go('portfolio.userdetails')" class="fm-button button-accent">Föregående</button>
+</div>
