--- a/src/Sandbox/wwwroot/views/fm-portfolio-generator-configure-view.html
+++ b/src/Sandbox/wwwroot/views/fm-portfolio-generator-configure-view.html
@@ -27,10 +27,19 @@
     </div>
   </div>
 
-  <div class="col-xs-8 col-sm-8">
+  <div class="col-xs-8 col-sm-8" ng-if="!fmPortfolio.payOnce">
     <h3>Månadsspara</h3>
     <p style="font-size: 1.4rem;">
       Bacon ipsum dolor amet tongue leberkas pork belly, rump ham short ribs andouille pancetta shoulder biltong filet mignon meatball capicola.
+    </p>
+    <input id="fm-range" type="range" min="0" max="10000" step="50" ng-model="fmPortfolio.payments" />
+    <input ng-model="fmPortfolio.payments" type="text" min="0" max="10000" step="50" />
+  </div>
+
+  <div class="col-xs-8 col-sm-8" ng-if="fmPortfolio.payOnce">
+    <h3>Engångsköp</h3>
+    <p style="font-size: 1.4rem;">
+      Fooobar
     </p>
     <input id="fm-range" type="range" min="0" max="10000" step="50" ng-model="fmPortfolio.payments" />
     <input ng-model="fmPortfolio.payments" type="text" min="0" max="10000" step="50" />
